--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "devDependencies": {
     "nodemon": "^3.0.1",
     "tailwindcss": "^3.3.3"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   }
 }
